# code-assistant

./: .code-assistant.state.json  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  chat-persistence-implementation-plan.md  models.example.json  models.json  providers.example.json  providers.json  settings.example.json  streaming-callback-extension.md  system-message.md  tarpaulin-report.html  test_caret_system_message.rs  tool-refactoring-plan-revised.md  tool-refactoring-plan.md  tools.example.json  ui-migration-plan.md
crates/agent_core/: Cargo.toml
crates/agent_core/src/: dialect.rs  hooks.rs  lib.rs  persistence.rs  runtime.rs  tree.rs  types.rs  ui.rs
crates/agent_core/src/native/: json_processor.rs  mod.rs
crates/agent_orchestration/: Cargo.toml
crates/agent_orchestration/src/: goal_commands.rs  goal_eval.rs  goals.rs  lib.rs  runs.rs  waits.rs
crates/code_assistant/: Cargo.toml
crates/code_assistant/assets/: AppIcon.icns  Info.plist
crates/code_assistant/resources/: system_message.md  system_message_tools.md  tool_use_intro.md
crates/code_assistant/resources/chat/: system_message_tools.md
crates/code_assistant/resources/system_prompts/: codex.md  default.md  mapping.json
crates/code_assistant/resources/working_memory/: system_message_tools.md
crates/code_assistant/src/: cli.rs  codex_commands.rs  config.rs  config_dir.rs  explorer.rs  format_on_save.rs  logging.rs  main.rs  main_v2.rs  persistence.rs  settings.rs  types.rs
crates/code_assistant/src/acp/: agent.rs  error_handling.rs  explorer.rs  mod.rs  terminal_executor.rs  types.rs  ui.rs
crates/code_assistant/src/agent/: agent.rs  context_window_tests.rs  dialect.rs  hooks.rs  mod.rs  persistence.rs  runner.rs  state_storage.rs  sub_agent.rs  tests.rs  tool_description_generator.rs  types.rs  ui.rs
crates/code_assistant/src/app/: acp.rs  gpui.rs  mod.rs  server.rs  terminal.rs
crates/code_assistant/src/llm/: ollama.rs  utils.rs
crates/code_assistant/src/mcp/: handler.rs  mod.rs  resources.rs  tests.rs  types.rs
crates/code_assistant/src/permissions/: acp.rs  mod.rs
crates/code_assistant/src/plugins/: app_state.rs  compaction.rs  mod.rs  name_session.rs  plan.rs  recovery.rs  sub_agent.rs  system_prompt.rs  tool_services.rs
crates/code_assistant/src/session/: diag.rs  instance.rs  manager.rs  mod.rs  multi_manager.rs  watcher.rs
crates/code_assistant/src/tests/: format_on_save_tests.rs  gitignore_tests.rs  integration_tests.rs  mocks.rs  mod.rs  sandbox_tests.rs  sub_agent_tests.rs  utils.rs
crates/code_assistant/src/tool_dialects/: mod.rs  system_message.rs  tests.rs
crates/code_assistant/src/tools/: adapter.rs  annotated_definition.rs  definitions.rs  executor.rs  formatter.rs  handlers.rs  integration_tests.rs  mod.rs  parse.rs  parser_registry.rs  result.rs  scope.rs  system_message.rs  tests.rs  tool_use_filter.rs  types.rs
crates/code_assistant/src/ui/: backend.rs  mod.rs  terminal.rs  terminal_test.rs  ui_events.rs
crates/code_assistant/src/utils/: command.rs  content.rs  encoding.rs  file_updater.rs  file_utils.rs  mod.rs  sandboxed_executor.rs  writer.rs
crates/code_assistant/src/web/: tests.rs
crates/code_assistant_core/: Cargo.toml
crates/code_assistant_core/resources/: compaction_prompt.md  tool_use_intro.md
crates/code_assistant_core/resources/system_prompts/: mapping.json
crates/code_assistant_core/src/: backend.rs  config.rs  goal_commands.rs  goals.rs  lib.rs  mocks.rs  permissions.rs  persistence.rs  types.rs
crates/code_assistant_core/src/agent/: mod.rs  persistence.rs  runner.rs  sub_agent.rs  tests.rs  types.rs  ui.rs
crates/code_assistant_core/src/plugins/: app_state.rs  compaction.rs  mod.rs  name_session.rs  plan.rs  recovery.rs  skill_snapshot.rs  sub_agent.rs  system_prompt.rs  tool_services.rs
crates/code_assistant_core/src/session/: event_stream.rs  instance.rs  manager.rs  mod.rs  permissions.rs  service.rs  sleep_inhibitor.rs  turn.rs  wakeup.rs  watcher.rs
crates/code_assistant_core/src/skills/: bundled.rs  config.rs  invoke.rs  loader.rs  manifest.rs  mod.rs  render.rs
crates/code_assistant_core/src/tests/: format_on_save_tests.rs  integration_tests.rs  mod.rs  sandbox_tests.rs  sub_agent_tests.rs  utils.rs
crates/code_assistant_core/src/tool_dialects/: mod.rs  (+2 more)
crates/fs_explorer/: Cargo.toml
crates/fs_explorer/src/: document_search.rs  encoding.rs  explorer.rs  file_updater.rs  lib.rs  types.rs
crates/git/: Cargo.toml
crates/git/src/: binary.rs  branch.rs  lib.rs  repository.rs  types.rs  worktree.rs
crates/llm/: Cargo.toml
crates/llm/src/: aicore_converse.rs  aicore_invoke.rs  anthropic.rs  anthropic_playback.rs  auth.rs  cerebras.rs  codex_auth.rs  config.rs  config_merge.rs  display.rs  factory.rs  groq.rs  lib.rs  minimax.rs  mistralai.rs  moonshot.rs  ollama.rs  openai.rs  openai_responses.rs  openai_responses_ws.rs  openrouter.rs  provider_config.rs  recording.rs  streaming.rs  tests.rs  types.rs  utils.rs  vertex.rs  zai.rs
crates/mcp_client/: Cargo.toml
crates/mcp_client/src/: client.rs  config.rs  lib.rs  naming.rs  output.rs  registry.rs  tests.rs  tool.rs
crates/mcp_server/: Cargo.toml
crates/mcp_server/src/: handler.rs  lib.rs  server.rs  tests.rs
crates/pty_session/: Cargo.toml
crates/pty_session/src/: buffer.rs  lib.rs  manager.rs  session.rs
crates/tools_core/: Cargo.toml
crates/tools_core/src/: dyn_tool.rs  lib.rs  permissions.rs  registry.rs  render.rs  result.rs  spec.rs  title.rs  tool.rs
crates/ui_acp/: Cargo.toml
crates/ui_acp/src/: agent.rs  app.rs  explorer.rs  lib.rs  permissions.rs  terminal_executor.rs  types.rs  ui.rs
crates/ui_gpui/: Cargo.toml
crates/ui_gpui/src/: lib.rs
crates/ui_terminal/: Cargo.toml
crates/ui_terminal/src/: app.rs  commands.rs  composer.rs  history_insert.rs  input.rs  lib.rs  message.rs  renderer.rs  state.rs  textarea.rs  tool_widget.rs  transcript.rs  ui.rs  welcome_banner.rs
crates/web/: Cargo.toml
crates/web/src/: browser.rs  browser_session.rs  client.rs  lib.rs  parallel.rs  perplexity.rs  tests.rs
(+543 files in other folders)
