[workspace]
members = ["crates/agent_core", "crates/code_assistant", "crates/code_assistant_core", "crates/command_executor", "crates/fs_explorer", "crates/git", "crates/llm", "crates/sandbox", "crates/terminal", "crates/terminal_test_app", "crates/terminal_view", "crates/tools_core", "crates/web"]

resolver = "2"

[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed" }
gpui_macros = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
