[workspace]
members = ["crates/agent_core", "crates/code_assistant", "crates/code_assistant_core", "crates/ui_acp", "crates/ui_gpui", "crates/ui_terminal", "crates/command_executor", "crates/fs_explorer", "crates/git", "crates/llm", "crates/mcp_client", "crates/mcp_server", "crates/pty_session", "crates/sandbox", "crates/terminal", "crates/terminal_output", "crates/terminal_test_app", "crates/terminal_view", "crates/tools_core", "crates/web"]

resolver = "2"

[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }
# These patches are intentionally left unpinned (no `rev`). gpui-component
# itself depends on gpui via an unpinned `git = ".../zed"` dependency, so it
# always resolves to the zed default-branch HEAD. The workspace must resolve to
# that same commit, otherwise two copies of gpui end up in the graph and cause
# E0053/E0277/E0599 type mismatches. The exact commit is locked in Cargo.lock,
# and CI builds with `--locked`, so the resolved versions stay stable. Only an
# explicit `cargo update` re-resolves them; the release workflow therefore uses
# `cargo update --workspace` (not a bare `cargo update`) when bumping versions,
# to avoid drifting these git dependencies. See .github/workflows/release.yml.
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed" }
gpui_macros = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
