[package]
name = "agent_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
command_executor = { path = "../command_executor" }
futures = "0.3"
llm = { path = "../llm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.48", features = ["full"] }
tools_core = { path = "../tools_core" }
tracing = "0.1"
