[package]
name = "code-assistant"
version = "0.2.10"
edition = "2021"

# Bundling via `cargo bundle` (cargo install cargo-bundle && cargo bundle --release).
# The canonical macOS bundle metadata lives in assets/Info.plist; keep these
# values in sync if you change identifiers there.
[package.metadata.bundle]
name = "Code Assistant"
identifier = "dev.stippi.code-assistant"
icon = ["assets/AppIcon.icns", "assets/app_icon.png"]
category = "public.app-category.developer-tools"
short_description = "AI-assisted coding agent."
osx_minimum_system_version = "10.15"

[features]
default = [
    "acp-frontend",
    "gpui-frontend",
    "mcp-server",
    "terminal-frontend",
    "document-conversion",
]
document-conversion = ["code_assistant_core/document-conversion"]
# Each frontend and protocol mode is an optional compile unit; a headless
# build (--no-default-features) skips gpui and ratatui entirely.
acp-frontend = ["dep:ui_acp"]
gpui-frontend = ["dep:ui_gpui"]
mcp-server = ["dep:mcp_server"]
terminal-frontend = ["dep:ui_terminal"]

[dependencies]
code_assistant_core = { path = "../code_assistant_core", default-features = false }
mcp_server = { path = "../mcp_server", optional = true }
ui_acp = { path = "../ui_acp", optional = true }
ui_gpui = { path = "../ui_gpui", optional = true }
ui_terminal = { path = "../ui_terminal", optional = true }
command_executor = { path = "../command_executor" }
llm = { path = "../llm" }
sandbox = { path = "../sandbox" }

tokio = { version = "1.48", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
open = "5"
dirs = "5.0"
