[package]
name = "fs_explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
command_executor = { path = "../command_executor" }
content_inspector = "0.2.4"
encoding_rs = "0.8.35"
glob = "0.3.1"
ignore = "0.4.23"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.40"

[dev-dependencies]
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
