[package]
name = "llm"
version = "0.1.13"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"
tracing = "0.1"
oauth2 = "4.4"
base64 = "0.21"
keyring = "2.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.23"
thiserror = "1.0"
regex = "1.11"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
axum = "0.7"
bytes = "1.10"
