[package]
name = "llm"
version = "0.2.7"
edition = "2021"

[features]
default = ["tls-native-roots"]
## Use the OS-native root CA certificates (macOS Keychain, Windows cert store, etc.)
tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
## Use embedded Mozilla root CA certificates (works on all platforms incl. iOS)
tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
tracing = "0.1"
oauth2 = "4.4"
base64 = "0.21"
keyring = "2.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.23"
thiserror = "1.0"
regex = "1.12"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2.1"
rand = "0.8"
tokio-tungstenite = "0.28"
futures-util = "0.3"
sha2 = "0.11.0"

[dev-dependencies]
axum = "0.7"
bytes = "1.10"
