[package]
name = "mcp_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tools_core = { path = "../tools_core" }
rmcp = { version = "2.1", default-features = false, features = [
    "base64",
    "client",
    "transport-child-process",
] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "process", "rt", "io-util", "time", "sync"] }
tracing = "0.1"

[dev-dependencies]
rmcp = { version = "2.1", default-features = false, features = [
    "base64",
    "client",
    "server",
    "macros",
    "transport-child-process",
] }
tokio = { version = "1.48", features = ["full"] }
schemars = "1.0"
