[package]
name = "mcp_server"
version = "0.2.12"
edition = "2021"

[dependencies]
code_assistant_core = { path = "../code_assistant_core", default-features = false }
tools_core = { path = "../tools_core" }
command_executor = { path = "../command_executor" }
fs_explorer = { path = "../fs_explorer" }

tokio = { version = "1.48", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

tracing = "0.1"

[dev-dependencies]
code_assistant_core = { path = "../code_assistant_core", default-features = false, features = ["test-utils"] }
tempfile = "3.23"
