[package]
name = "web"
version = "0.1.15"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
futures = "0.3"
htmd = "0.1.6"
percent-encoding = "2.3"
regex = "1.11"
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
tokio = { version = "1.47", features = ["full"] }
url = "2.5"

[dev-dependencies]
axum = "0.7"
